--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -1,14 +1,17 @@
 es.cluster.name = es-test
-es.node.hosts = 192.168.1.104:9300,192.168.1.105:9300,192.168.1.106:9300,192.168.1.103:9300
+#es.node.hosts = 192.168.1.104:9300,192.168.1.105:9300,192.168.1.106:9300
+es.node.hosts = 192.168.1.103:9300
 es.client.transport.sniff = true
-es.index.name = test
+es.client.transport.ping_timeout = 20s
+es.index.name.prefix = test
+es.index.name.postfix.format = yyyy-MM-dd-HH
 es.type.name = doc
 
 #缓冲池最大提交文档数（条）
-es.bulkProcessor.bulkActions = 10000
+es.bulkProcessor.bulkActions = 25000
 #缓冲池总文档体积达到多少时提交（MB）
-es.bulkProcessor.bulkSize = 20
+es.bulkProcessor.bulkSize = 18
 #最大提交间隔（秒）
-es.bulkProcessor.flushInterval = 30
+es.bulkProcessor.flushInterval = 20
 #并发请求数
-es.bulkProcessor.concurrentRequests = 20
+es.bulkProcessor.concurrentRequests = 16
