--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<version>1.2.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
