同步车辆信息完成

--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -1,5 +1,8 @@
+#研发环境
+#zookeeper.connect=192.168.6.101:2181,192.168.6.103:2181,192.168.6.104:2181
+
 #测试环境
-zookeeper.connect=192.168.1.101:2181,192.168.1.102:2181,192.168.1.103:2181
+zookeeper.connect=192.168.1.56:2181,192.168.1.57:2181,192.168.1.58:2181
 
 #通用配置
 zookeeper.session.timeout.ms=3000
