--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -1,9 +1,9 @@
-es.cluster.name = es-test
-es.node.hosts = 192.168.6.103:9300,192.168.6.104:9300,192.168.6.105:9300
+es.cluster.name = elasticsearch_production
+es.node.hosts = 192.168.1.142:9300,192.168.1.143:9300,192.168.1.144:9300,192.168.1.145:9300,192.168.1.146:9300
 es.client.transport.sniff = true
 es.client.transport.ping_timeout = 20s
 es.index.name.prefix = test
-es.index.name.postfix.format = yyyy-MM-dd-HH
+es.index.name.postfix.format = yyyy-MM-dd
 es.type.name = doc
 
 #缓冲池最大提交文档数（条）
