--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -1,5 +1,8 @@
+#研发环境
+#metadata.broker.list=192.168.6.105:9092,192.168.6.106:9092
+
 #测试环境
-metadata.broker.list=192.168.1.102:9092,192.168.1.103:9092
+metadata.broker.list=192.168.1.54:9092,192.168.1.55:9092
 
 #通用配置
 # 最小副本数
